--- a/基础知识/进阶速通.md
+++ b/基础知识/进阶速通.md
@@ -238,9 +238,11 @@ print(student_a.age)
 student_a.age=233
 print(student_a.age)
 ```
+
 说明这个High_school_student类没有进行有效的封装！
 
 - 如果我们希望某些内部属性不被外部访问，我们可以在属性名称前加上两个下划线"__" ，表示将该属性成员私有化，该成员在内部可以被访问，但是在外部是不能够访问的。
+
 ```
 class High_school_student():
     def __init__(self):
@@ -251,15 +253,19 @@ student_a = High_schoo1_student()
 print(student_a.__age)
 ```
 
-- 成员私有化并不是代表完全不能够从夕卜部访问成员，而是提高了访问的门槛，防止意外或者随意改变成员，引发错误。我们仍然可以通过类名+私有变量，对变量进行访问
+- 成员私有化并不是代表完全不能够从外部访问成员，而是提高了访问的门槛，防止意外或者随意改变成员，引发错误。我们仍然可以通过类名+私有变量，对变量进行访问
+
 ```
 student_a.__age = 18.8
 print(student_a._High_school_studént__age)
 print(student_a.__age）
 ```
+
 这也是我们说Python没有严格意义上的封装性的原因！
 
+
 - 成员私有化不仅包括属性的私有化，也包括了方法的私有化，在方法名称前加上__也可以使得函数只能被内部访问，不能够被外部访问
+
 ```
 class High_school_student():
     def __init__(self):
@@ -279,6 +285,7 @@ student_a.missing_detecting()
 ### 给对象添加不存在的属性和方法
 - 在Python中实例化对象以后，动态的添加类的属性和方法同样会影响对象：
     - 动态的属性和方法也可以直接添加在对象上。添加在对象上不会反过来影响类
+
 ```
 class Person(object):
     def __init__(self,age,name):
@@ -294,6 +301,7 @@ p1.eat()
 # 输出
 # zhangsan 吃鸡蛋
 ```
+
 
 ### 面向对象-函数与方法
 - 函数：函数是封装了一些独立的功能，可以直接调用，能将一些数据（参数）传递进去进行处理，然后返回一些数据（返回值），也可以没有返回值。可以直接在模块中进行定义使用。
@@ -368,17 +376,277 @@ p1.eat()
 
 # 造轮子
 ## 轮子与模块
+### 程序中的轮子
+- 在程序中，我们将封装好的组件、库称之为轮子。它可以拿来直接用，实现对应的功能
+- 发明轮子与造轮子：
+    - 不要重复发明轮子
+- 在Python 中一个工具库就像是一个轮子
+    - 一个轮子中又有很多的模块组成
+
+### 模块简介
+- 在计算机程序的开发过程中，随着程序代码越写越多，在一个文件里代码就会越来越长，越来越不容易维护。
+- 为了编写可维护的代码，我们把很多函数分组，分别放到不同的文件里，这样，每个文件包含的代码就相对较少，
+很多编程语言都采用这种组织代码的方式。在Python中，一个py文件就可以称之为一个模块(Module) 。
+
+### 第三方工具包
+- Pandas: 数据处理与分析
+- Numpy: 科学计算
+- MatpIotIib: 绘图
+- Scikit-learn ： 基于SciPy和Numpy的开源机器学习模块
+- Tensorflow: 深度学习框架
+### 标准库
+- OS
+- sys
+- time
+
+### 模块的作用
+- 模块是Python 中的最高级别组织单元，它将程序代码和数据封装起来以便重用。
+- 模块的三个角色：
+    - 代码复用
+    - 系统命名空间的划分（模块可理解为变量名的封装，即模块就是命名空间） 
+    - 实现共享服务和数据
+
+### Python程序的架构
+- Python源代码文件： *.py
+    - 一个py文件是一个模块(module)
+    - 多个模块可以组成一个包（package）
+    - 包是一个目录。要被python视为包，目录中必须包含__init__.py文件，包的导入会首先执行__init__.py。其他模块加入包中，放入包的目录即可。
+
+### 模块的执行环境
+- 模块的执行环境：模块包含变量、函数、类以及其他的模块（如果导入的话）而函数也有自己的本地变量。
+
+### import搜索的路径顺序
+1.程序的主目录 -> 2.PYTHONPATH(环境变量)目录 -> 3.标准链接库目录 -> 4.任何path文件的内容
+
+- 以上四个组件组合起来就变成了sys.path，其保存了模块搜索路径在机器上的实际配置，可以通过打印内置的sys.path列表来查看这些路径。
+- 搜索路径1和3是系统自定义的，而2和4可以用于拓展路径，从而加入自己的源代码目录。
 
 ## 常用的内置工具包
+在安装Pyt h o n 解释器后可以直接使用的工具包：
+- os, 负责程序与操作系统的交互，提供了访问操作系统底层的接口。
+- sys，负责程序与Python解释器的交互，提供了一系列的函数和变量用于操控Python运行时的环境。
+- time, 是Python中处理时间的一个重要模块，包含了许多的有关时间操作的方法。
+- random, Python随机函数库。
+- datetime, Python 中可操作日期和时间的模块。
+
+### os
+- os.getcwd()： 获取当前所在路径
+- os.chdir(path): 改变当前工作目录
+- os.listdir(): 返回目录下所有文件
+- os.walk() ： 返回目录下所有文件（包括子文件夹中的文件）
+
+```
+cwd = os.getcwd()
+print("当前所在路径为： ",cwd)
+
+os.chdir("../") # ../ 指的是当前目录上一级父目录， 此语句表示改变当前工作目录至上一级目录
+print("当前目录下的文件有：" ，os.listdir(cwd))
+```
+
+#### os.path子模块：
+- os.path.join(path) ： 按当前系统所能识别的方式链接目录名。
+- os.path.abspath(path): 返回绝对路径。
+- os.path.exists(path): 文件存在则返回True，不存在返回False
+- os.path.getsize(path) ： 返回文件大小，如果文件不存在就返回错误。
+- os.path.isfile(path) ： 判断路径是否为文件，如果是文件就返回True，不是就返回False
+- os.path.isdir(path): 判断路径是否为文件夹，如果是文件夹就返回True，不是就返回False
+
+### sys
+sys模块主要是针对与Python解释器相关的变量和方法，提供对解释器使用或维护的一些变量的访问，以及与解释器强烈交互的函数。
+
+- sys.exit([n]) ： 此方法可以是当前程序退出。
+
+```
+import sys
+for i in range(100):
+    print(i)
+    if i == 5:
+    sys.exit()
+```
+
+- 该程序在输出0，1，2，3，4，5之后会停止运行， 并且输出：
+
+```
+An exception has occurred，use %t b to see the fu'l traceback.
+SystemExit: 0
+```
+
+- sys.path：获取模块搜索路径。
+
+```
+import sys
+sys.path
+```
+
+- path 是一个目录列表， 供Python 从中查找模块。在Python启动时，sys.path根据内建规则和PYTHONPATH变量进行初始化。sys.path的第一个元素通常是个空字符串，表示当前目录。
+- sys.path 本质上是一个列表，可以进行append、insert 、pop 、remove 等各种列表相关的操作，但通常都进行append操作，添加自己想要的查找路径
+- sys.platform ：获取当前系统平台。
+- sys.argv: 从程序外部向程序传递参数，参数以列表的形式传递，第一个为当前文件名。
+
+### time
+- time库用于获取时间， 包括日期和当前时间点。常用的函数包括：
+    - time.time() ： 用于获取当前时间戳，还可用于输出某个代码块的运行时间。、
+```
+import time
+timel = time.time()
+time2= time.time()
+print(" 时间戳1 ： ",timel)
+print(" 时间戳2 ： ",time2)
+print(" 总运行时长： ",time2-time1)
+# 时间戳1 ： 15774162664012673
+# 时间戳2 ： 15774162664013052
+# 总运行时长： 3790855407714844e-05
+```
+- time.localtime(): 将时间戳转化为时间元组。
+
+```
+import time
+time_now = time.time()
+localtime = time.localtime(time_now)
+print(" 本地时间为： "，localtime)
+```
+
+- 输出时间元组示例：
+
+```
+本地时间为： time.struct_time(tm_year=2019 ，tm_mon = 1 ,tm_mday=11 ，tm_hour=14, tm_min=23, tm_sec=20, tm_wday=2, tm_yday=345, tm_isdst=0)
+```
+
+- time.asctime() ： 获取格式化的时间，通常用于将时间元组转化为可读性较强的格式
+
+```
+locaItime2 = time.asctime(localtime) # 输入之前的时间元组
+print(" 本地时间为： " ， localtime2)
+```
+
+- 或者使用time.strftime(format[, t]) ：接收时间元组，并返回以可读字符串表示的当地时间， 格式由参数format决定。
+
+```
+print(time.strftime("%Y-%m-%d %H:%M:%S", time.localtime()))
+```
+
+### random
+random库是Python 里以一定规律产生随机数的标准库。
+- random 随机数生成库的使用：
+    - random.random(): 生成0·1 之间的随机数。
+    - random.randint(m,n): 返回m到n之间的随机整数， 包含m和n
+
+
+```
+from random import *
+print(' 随机选取0 <= x < 1 的随机浮点数： ',random()) # 生成0-1之间的随机数，服从正态分布
+print(' 随机选取-3 <= × < 10 的随机整数： ',randint(-3,10)） # 返回指定区间的随机整数
+```
+
+- random.randrange(): 返回指定区间的随机数，可指定步长。
+    - 注： randint(start, end) 相当于randrange(start, end, 1）
+- random.uniform() ： 随机选取指定范围的随机浮点数。
+
+```
+from random import *
+print(' 在[-3，1 ，5 ，9] 里随机挑一个： ',randrange(-3,10,4)) # 返回指定区间的随机整数，可指定步长。
+print(' 随机选取-5 <= x < 5 的随机浮点数： ',uniform(-5,5)) # 均匀而随机选取指定范围的随机浮点数，服从均匀分布。
+```
+
+- random.sample() ： 随机选取指定数量的样本。
+- random.shuffle(): 洗牌。即将列表中元素顺序打乱。
+
+```
+l = list(range(10))
+print(' 从0 <= × < 10 中随机选5个数：',sample(l,5)) # 随机选取5个的样本。
+
+l = list(range(10))
+print(' 打乱前： ',l)
+shuffle(l)
+print(' 打乱后： ',l) # 洗牌。即将列表中元素顺序打乱。
+```
+
+### datetime
+- datetime 是Pyt № n 中关于日期时间操作模块，内置了诸多关于日期时间转化和计算的方法。
+- datetime 库中的操作主要是对其中四个类的操作：
+    - datetime.date: 日期类
+    - datetime.time: 时间类
+    - datetime.datetime: 时间日期类
+    - datetime.timedelta: 时间计算类
+- datetime.date:
+    - today() ： 获取今天的日期。
+    - strftime(format) ： 格式化为需要的时间格式。
+    - timple(): 将日期转成struct_time格式。
+    - fromtimestamp(timestamp) ： 将时间戳转化为date对象。
+- datetime.time ：
+    - datetime.time.(format) ： 格式化输出。
+- datetime.datetime ：
+    - now() ： 返回当前日期时间对象。
+    - ctime(): 返回日期时间字符串。
+    - date() ： 返回日期对象。
+    - time(): 返回时间对象。
+- datetime.timedelta ：
+    - d1-d2 ： 返回两个日期之间的timede 丨ta 对象。
+    - days() ： 返回两个日期之间的天数。
+    - total seconds(): 返回总秒数。
 
 
 # 文件读写
 ## 读写操作
+访问磁盘中的文件
+
+- Python中提供了open函数用于读写文件中的内容：
+
+open(filename,mode,encoding): 打开文件，返回文件操作对象。
+    - filename: 文件名
+    - mode: 文件打开模式
+    - encoding: 编码格式
+```
+f = open(" 射雕英雄传.t×t", "r", "utf8"） # 以只读的方式打开文件
+f.read() # 返回文件内容
+f.close() # 关闭文件
+```
+
+- f.read(size) ： 返回文件中的内容
+    - size, 控制一次读取的内容大小
+- f.readline(): 一次只读取一行的内容
+    - 文本文件中的/ n 被视为换行
+- f.readlines(): 按行读取所有，返回一个列表，每一项的内容为一个f.readline()
+
+- open函数打开的文件对象， 不仅可以读， 还可以用来写。
+- 使用写的模式打开不存在的文件可以新建文件。
+```
+str = """
+小说内容， 此处省去十万字
+"""
+f = open("重生之我是程序员.txt","w","utf8")
+f.write(str_) # 写入内容
+f.close()
+```
+w覆盖写入，a追加写入
+
+- 打开一个文本文件写入了数十万字，但是还没保存，电脑断电关机了，内容还会存在吗？
+- 数据先写入缓存，在保存时会写入到磁盘中。
+- f.close(): 关闭文件。
+    - 在关闭时刽数据写入到磁盘中。
+    - 文件读写时不加入close方法可能会造成数据丢失；
+    - 长时间不关闭打开的文件，会出现异常。
+- f.flush(): 将缓存内容写入硬盘。
+
+
+- f.tell() ：返回当前文件读取位置。
+- f.seek(off, where) ： 定位文件读写位置。off表示偏移量，正数向结尾移动，负数向开头移动。where为0 表示起始位置开始， 1表示当前位置， 2表示结尾位置。
 
 ## 上下文管理器
+让文件自己关闭
+- 在操作文件后容易忘记使用close方法关闭文件，有什么方法能让文件自己关闭？
+- 使用with语句：
+    - with open(file name, mode,encoding) as f:  # 文件操作语句
+    - 不需要手动关闭。
+
+- with 为上下文管理器。
+- 上下文管理器是指在一段代码执行之前执行一段代码， 用于一些预处理工作； 执行之后再执行一段亻弋码， 用于一些清理工作。
+- 在上下文管理协议有两个方法__enter__ 和__exit__, 分别实现预处理和清理功能。
+- 使用上下文管理器操作文件可以在操作结束后自动关闭文件。
 
 
 # 小妙招
-## 小技巧
+## 垃圾回收机制
+Python的内存管理是由Python的解释器负责的， 发人员可以从内存管理事务中解放出来。
+- Python中的垃圾回收机制以"引用计数" (reference counting)来跟踪和回收垃圾。在引用计薮的基础上，还可以通过"标记一清除" (mark and sweep) 解决容器对象可能产生的循环引用的问题。通过"分代回收" (generation collection) 以空间换取时间来进一步提高垃圾回收的效率。
 
-## 垃圾回收
